--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "letter-image-avatar",
-  "version": "0.0.0",
+  "name": "ngx-letter-image-avatar",
+  "version": "0.1.0",
+  "license": "MIT",
+  "git": "",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +11,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0",
     "@angular/common": "~9.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-ng-packagr": "~0.900.6",
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
@@ -39,6 +41,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
