--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "letter-image-avatar": {
@@ -116,6 +116,46 @@
             "production": {
               "devServerTarget": "letter-image-avatar:serve:production"
             }
+          }
+        }
+      }
+    },
+    "ngx-letter-image-avatar": {
+      "projectType": "library",
+      "root": "projects/ngx-letter-image-avatar",
+      "sourceRoot": "projects/ngx-letter-image-avatar/src",
+      "prefix": "ngx",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-letter-image-avatar/tsconfig.lib.json",
+            "project": "projects/ngx-letter-image-avatar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-letter-image-avatar/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-letter-image-avatar/src/test.ts",
+            "tsConfig": "projects/ngx-letter-image-avatar/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-letter-image-avatar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-letter-image-avatar/tsconfig.lib.json",
+              "projects/ngx-letter-image-avatar/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
