--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "author": "Andrii Cherepovskyi",
   "description": "Directive for generating letter avatar (initials) in case no src provided",
-  "keywords": ["angular", "directive", "letter avatar", "image avatar"],
+  "keywords": ["angular", "directive", "letter avatar", "image avatar", "directive"],
   "repository": {
     "type": "git",
     "url": "https://github.com/ndr/ngx-letter-image-avatar.git"
