--- a/projects/ngx-letter-image-avatar/package.json
+++ b/projects/ngx-letter-image-avatar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-letter-image-avatar",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "license": "MIT",
   "author": "Andrii Cherepovskyi",
   "description": "Directive for generating letter avatar (initials) in case no src provided",
@@ -10,8 +10,8 @@
     "url": "https://github.com/ndr/ngx-letter-image-avatar.git"
   },
   "peerDependencies": {
-    "@angular/common": "^9.0.6",
-    "@angular/core": "^9.0.6",
+    "@angular/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
+    "@angular/core":"^7.0.0 || ^9.0.0 || ^9.0.0",
     "tslib": "^1.10.0"
   }
 }
